[package]
name = "assign"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bs58 = "0.4"
solana-sdk = "1.18"
spl-token = "4.0.0"
spl-associated-token-account = "2.2.0"
base64 = "0.21"

